Mon Mar 10 15:00:32 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/mkdtemp.c: Define __GT_DIR if necessary.
	* lib/tempfile.c: Prototype mkstemp() and mkdtemp().

Mon Mar 10 14:46:39 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/tempname.c: Include "config.h" rather than <config.h>.

Mon Mar  3 22:00:03 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Remove silly calls to fclose() on null
	  pointers.

Sun Mar  2 20:37:08 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Save errno before performing operations that
	  might change it. Close ifp as well if an error occurs while
	  opening ofp.

Fri Feb 28 01:50:21 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (find_in_path): path needs to be preserved in order to
	  be freed safely, or else we segfault. Use a temporary variable for
	  strsep() instead.

Mon Feb 24 17:05:25 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Only use the \[shc] character if it's
	  available, which is the case on groff's latin1 and utf8 devices
	  but not on others. Otherwise, use \(hy.

Mon Feb 24 00:17:39 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* docs/manpage.example (OPTIONS): Move the note about '\-' versus
	  '-' from a comment into displayed text.

Sun Feb 23 00:34:12 GMT 2003  Alexandre Folle de Menezes  <afmenez@terra.com.br>

	* po/pt_BR.po: Update from Translation Project.

Sat Feb 22 18:32:58 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_CHECK_BDB): Remove some extra calls to
	  AC_MSG_RESULT, since AC_CACHE_CHECK already calls that.

Sat Feb 22 18:10:14 GMT 2003  Morten Brix Pedersen  <morten@wtf.dk>

	* po/da.po: Translate a few more strings.

Sat Feb 22 18:06:09 GMT 2003  Alexandre Folle de Menezes  <afmenez@terra.com.br>

	* po/pt_BR.po: Update from Translation Project.

Sat Feb 22 17:50:55 GMT 2003  Colin Watson  <cjwatson@debian.org>
