@@ -2,6 +2,7 @@ ABOUT-NLS
 GNUmakefile
 aclocal.m4
 autom4te.cache
+config.h*
 config.log
 config.status
 configure
