@@ -6,7 +6,7 @@ AC_INIT(man-db, 2.4.1)
 AC_PREREQ(2.50a)
 AC_CONFIG_SRCDIR(acinclude.m4)
 AC_CONFIG_AUX_DIR(tools)
-AC_CONFIG_HEADER(include/config.h)
+AC_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 AC_ARG_PROGRAM
 dnl
